<resources>
    <string name="app_name" translatable="false">Aws School</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="home_second" translatable="false">Home Second</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="type_message_chat" translatable="false">Type a mess...</string>
    <string name="find_friend" translatable="false">Find Friend</string>
    <string name="search_who_want_you_find" translatable="false">Search who want you find ...</string>
    <string name="upload_lecture" translatable="false">Upload Lecture</string>
    <string name="insert_subjects" translatable="false">Insert Subject</string>
    <string name="insert_nearly_test" translatable="false">Insert Nearly Test</string>
    <string name="insert_mark" translatable="false">Insert Mark</string>
    <string name="setting" translatable="false">Setting</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="btnSendRequest" translatable="false">Send Friend Request</string>
    <string name="btnCancelRequest" translatable="false">Cancel Friend Request</string>
    <string name="accept_request" translatable="false">Accept Chat Request</string>
    <string name="remove_this_contact" translatable="false">Remove this contact</string>
    <string name="user_name" translatable="false">Username</string>
    <string name="status" translatable="false">Status</string>
    <string name="save" translatable="false">Save</string>
    <string name="welcome_back" translatable="false">Welcome back!</string>
    <string name="sign_in_to_continue" translatable="false">Sign in to continue</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="dont_have_account" translatable="false">Dont have account?</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="sign_up_welcome" translatable="false">Sign Up</string>
    <string name="create_your_account" translatable="false">Create your account</string>
    <string name="Register" translatable="false">Register</string>
    <string name="already_have_an_account" translatable="false">Already have an account</string>
    <string name="select_what_you_need" translatable="false">Select what you need!</string>
    <string name="mp3" translatable="false">Mp3</string>
    <string name="pdf" translatable="false">Pdf</string>
    <string name="video" translatable="false">Video</string>
    <string name="next" translatable="false">Next</string>
    <string name="lets_go" translatable="false">Next</string>
    <string name="we_have_a_lot_of_training_courses" translatable="false">We have a lot of training courses</string>
    <string name="you_can_study_every_thing_from_your_house" translatable="false">You can study every thing from your house</string>
    <string name="we_will_help_you_in_all_subjects" translatable="false">We will help you in all subjects</string>
    <string name="add_course" translatable="false">Add Course</string>
    <string name="course_name" translatable="false">Course Name</string>
    <string name="teeacher_name" translatable="false">Teeacher Name</string>
    <string name="select_the_days" translatable="false">Select The Days</string>
    <string name="sat" translatable="false">Sat</string>
    <string name="sun" translatable="false">Sun</string>
    <string name="mon" translatable="false">Mon</string>
    <string name="tus" translatable="false">Tus</string>
    <string name="wed" translatable="false">Wed</string>
    <string name="thu" translatable="false">Thu</string>
    <string name="fri" translatable="false">Fri</string>
    <string name="start" translatable="false">Start</string>
    <string name="end" translatable="false">End</string>
    <string name="add" translatable="false">Add</string>
    <string name="add_subject" translatable="false">Add Subject</string>
    <string name="subject_name" translatable="false">Subject Name</string>
    <string name="enter_marks_name" translatable="false">Enter Mark Name</string>
    <string name="upload" translatable="false">Upload</string>
    <string name="enter_mp3_name" translatable="false">Enter Mp3 Name</string>
    <string name="enter_test_name" translatable="false">Enter Test Name</string>
    <string name="select_date" translatable="false">Select Date</string>
    <string name="enter_pdf_name" translatable="false">Enter Pdf Name</string>
    <string name="enter_video_name" translatable="false">Enter Video Name</string>
    <string name="add_group" translatable="false">Add Group</string>
    <string name="name" translatable="false">Enter The Name</string>
    <string name="messages" translatable="false">Messages </string>
    <string name="search_who_want_you_chat_with" translatable="false">Search who want you chat with ... </string>
    <string name="friends" translatable="false">Friends </string>
    <string name="groups" translatable="false">Groups </string>
    <string name="hello" translatable="false">Hello </string>
    <string name="lets_to_study" translatable="false">Lets to Study</string>
    <string name="search_about_any_course_you_want" translatable="false">Search any course ...</string>
    <string name="subjects_for_you" translatable="false">Subjects For You </string>
    <string name="appointments" translatable="false">Your appointments </string>
    <string name="requests" translatable="false">Requests</string>
    <string name="student" translatable="false">Student :</string>
    <string name="please_wait" translatable="false">Please Wait</string>
    <string name="select_a_group" translatable="false">Select a group</string>
    <string name="marks" translatable="false">Marks</string>
    <string name="nearly_test" translatable="false">Nearly Tests</string>
    <string name="arabic_language" translatable="false">Arabic</string>
    <string name="english_language" translatable="false">English</string>


</resources>
