<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/txtDialogtSubjectTitle"
        style="@style/FontFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_group"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDialogtSubjectTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/edtDialogGroupName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/FontFamily"
                    android:drawableRight="@drawable/ic_group_dialog"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnDialogGroupAdd"
                style="@style/FontFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/style_btn"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/add"

                android:textColor="#fff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDialogSubjectSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/style_btn"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Save"
                android:textColor="#fff"
                android:textStyle="bold"
                android:visibility="gone" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>